<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">KatalogKiller</string>
    <string name="update">Update</string>
   <string name="action_settings">Settings</string>
   <string name="action_profile">Profile</string>
   <string name="hello_world">Login Screen</string>
   <string name="username">Email Id:  </string>
   <string name="password">Password: </string>
   <string name="signin">Sign In</string>
   <string name="Clickhere"> Forget Password ?</string>
   <string name="emailid">Enter Registered Email id</string>
   <string name="typeemailid">abc@katalogkiller.com</string>
   <string name="reenteremail"> Re-enter Email id</string>
   <string name="submit"> Submit </string>
   <string name="phoneno"> Phone Number:</string>
   <string name="Name"> Name: </string>
   <string name="Register"> Register </string>
   <string name="alreadyamember"> Already a member </string>
   <string name="signup"> Sign Up</string>
   <string name="Manual_Data">Enter Catalog Info</string>
   <string name="enter_manual">Enter Data</string>
   <string name="Decoding_Fail">Decoding Failed</string>
   <string name="ViewProcessedResult">Suggested List</string>
   <string name="Address">Address</string>
   <string name="Welcome">Welcome</string>
   
   
   <!-- changes by Shilpan -->
   <string name="camera_text">Scan Catalog</string>
   <string name="unsubscription_history">Catalogs</string>
   <string name="faqs">FAQ (Using App)</string>
   <string name="leader_board">LeaderBoard (Go Green)</string>
   <string name="capture">Capture</string>

</resources>
