<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
     <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailid"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />
  
</RelativeLayout>

     <EditText
         android:id="@+id/editemailid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/typeemailid"
         android:inputType="textEmailAddress"
         android:paddingTop="10dp" />

     <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        >
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reenteremail"
        android:textAppearance="?android:attr/textAppearanceMedium" />
 </RelativeLayout>

     <EditText
         android:id="@+id/editemailid2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/typeemailid"
         android:inputType="textEmailAddress" >

         <requestFocus />
     </EditText>

     <Button
         android:id="@+id/btnforgetlogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="70dp"
         android:text="@string/submit" />

</LinearLayout>
