<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        
        >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginRight="70dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginLeft="110dp" >

        <requestFocus />
    </EditText>
    
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginRight="70dp"  />

    <EditText
        android:id="@+id/editText2"
         android:layout_width="170dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="110dp"  />
    </RelativeLayout>
<RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginRight="70dp"  />

    <EditText
        android:id="@+id/editText3"
         android:layout_width="170dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="textPassword" 
        android:layout_marginLeft="110dp" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneno"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginRight="70dp"  />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="phone" 
        android:layout_marginLeft="110dp"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:layout_marginLeft="30dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alreadyamember"
        android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_marginLeft="130dp" />

    </RelativeLayout>

</LinearLayout>
